Fix button label positioning on mobile and tablet

--- a/_sass/_page-specific.sass
+++ b/_sass/_page-specific.sass
@@ -114,6 +114,8 @@
         color: $white
 
       .back
+        padding: 0
+
         span
           text-transform: uppercase
           font-size: 0.5em
@@ -128,6 +130,7 @@
 
       &.show
         display: block
+        --body-text-opacity: 1
         opacity: 1
 
       %project-link
@@ -194,7 +197,7 @@
 
       &.default-image-layout .project-image img
         border-radius: 1em
-        box-shadow: 2px -5px 7px 0px rgba(0, 0, 0, 0.2)
+        box-shadow: 0 -2px 6px 0 rgba(0, 0, 0, 0.2)
 
       &.initial-designs .project-image
         &:nth-of-type(2) img
