--- a/_sass/_responsive.sass
+++ b/_sass/_responsive.sass
@@ -14,7 +14,7 @@
 
 @media (max-width: $breakpoint-tablet)
   .nav-icon.open
-    margin: 0.7em 0 0.7em 0.85em
+    margin: 0.5em auto
     transform: rotate(90deg)
 
   .nav-panel
@@ -88,9 +88,6 @@
 
   .nav-button
     margin: 1em
-
-    .nav-icon
-      width: 62%
 
   .nav-panel
     padding: 1em
